# newwork

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  OPENWORK_RECREATION_PLAN.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.ru.md  README.zh-CN.md  ROADMAP.ko.md  ROADMAP.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/star-history/: stars.csv
.github/workflows/: backend-test.yml  docker-build.yml  flutter-test.yml  star-tracker.yml
docs/: MANUAL_VERIFICATION.md  PHASE_0_1_VERIFICATION_REPORT.md  api.md  architecture.md  deployment.md  development.md  troubleshooting.md
newwork-app/: README.md  pubspec.yaml
newwork-app/lib/: app.dart  main.dart
newwork-app/lib/core/: constants.dart
newwork-app/lib/core/error/: app_error.dart  retry_policy.dart
newwork-app/lib/core/theme/: app_theme.dart  colors.dart  text_styles.dart
newwork-app/lib/data/models/: ai_provider.dart  artifact.dart  event.dart  file_item.dart  local_session.dart  local_skill.dart  local_template.dart  local_workspace.dart  mcp_server.dart  message.dart  permission.dart  plugin.dart  session.dart  skill.dart  template.dart  todo.dart  workspace.dart
newwork-app/lib/data/providers/: dashboard_providers.dart  local_db_provider.dart  onboarding_provider.dart  storage_provider.dart
newwork-app/lib/data/repositories/: api_client.dart  websocket_client.dart
newwork-app/lib/features/dashboard/: dashboard_page.dart
newwork-app/lib/features/dashboard/tabs/: home_tab.dart  mcp_tab.dart  plugins_tab.dart  sessions_tab.dart  settings_tab.dart  skills_tab.dart  templates_tab.dart
newwork-app/lib/features/dashboard/widgets/: add_mcp_server_dialog.dart  add_plugin_dialog.dart  import_skill_dialog.dart  install_skill_dialog.dart  mcp_oauth_dialog.dart  run_template_dialog.dart  (+1 more)
newwork-app/lib/features/files/: file_browser_page.dart
newwork-app/lib/features/onboarding/: onboarding_page.dart
newwork-app/lib/features/session/: session_page.dart
newwork-app/lib/features/workspace/: workspace_page.dart
newwork-app/lib/services/: auto_update_service.dart  backend_manager.dart  error_recovery_service.dart  export_service.dart  file_download_service.dart  system_restart_service.dart
newwork-app/lib/shared/widgets/: app_button.dart  app_card.dart  app_input.dart  error_boundary.dart  health_indicator.dart  loading_indicator.dart  restart_dialog.dart
newwork-app/macos/Runner.xcodeproj/: project.pbxproj
newwork-app/macos/Runner/Configs/: AppInfo.xcconfig
newwork-app/test/: widget_test.dart
newwork-app/test/services/: export_service_test.dart  file_download_service_test.dart
newwork-app/test/widgets/: download_progress_dialog_test.dart
newwork-backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  build.ps1  build.sh  coverage.xml  newwork.spec  pyproject.toml  requirements.txt
newwork-backend/app/: __init__.py  main.py
newwork-backend/app/api/: files.py  mcp.py  permissions.py  plugins.py  providers.py  sessions.py  skills.py  templates.py  workspaces.py
newwork-backend/app/db/: __init__.py  database.py  repositories.py
newwork-backend/app/models/: __init__.py  mcp_protocol.py  mcp_server.py  permission.py  session.py  skill.py  template.py  workspace.py
newwork-backend/app/schemas/: __init__.py
newwork-backend/app/services/: __init__.py  config_service.py  conversation_service.py  event_service.py  file_service.py  mcp_connection_service.py  oauth_service.py  session_export_service.py  streaming_handler.py  tool_execution_service.py
newwork-backend/app/services/llm/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  minimax_provider.py  openai_provider.py  zai_provider.py
newwork-backend/app/tools/: __init__.py  base.py  bash_tool.py  file_tools.py  grep_tool.py  web_tools.py
newwork-backend/tests/: conftest.py  test_main.py  test_mcp_protocol.py  test_oauth_service.py  test_session_export_service.py
newwork-backend/tests/api/: test_health.py  test_providers.py  test_sessions.py
newwork-backend/tests/e2e/: test_session_flow.py
newwork-backend/tests/services/: test_llm_providers.py
newwork-reference/: package-lock.json  package.json
newwork-reference/src/: App.css  App.tsx
newwork-reference/src-tauri/: tauri.conf.json
newwork-reference/src-tauri/capabilities/: default.json
newwork-reference/src/components/: ChatInterface.module.css  ChatInterface.tsx  ConnectionModeSelector.module.css  ConnectionModeSelector.tsx  PermissionPanel.module.css  PermissionPanel.tsx  SessionManager.module.css  SessionManager.tsx  TimelineView.module.css  TimelineView.tsx  WorkspacePicker.module.css  WorkspacePicker.tsx
newwork-reference/src/hooks/: useSSEStream.ts
newwork-reference/src/lib/opencode/: client.ts  types.ts  utils.ts
scripts/: build-all.sh  dev.sh  test-e2e.sh
(+18 files in other folders)
