[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatch 빌드 설정 - 실제 패키지 위치 지정
[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
    "/app",
    "/tests",
    "/README.md",
]

[project]
name = "newwork-backend"
version = "0.3.0"
description = "FastAPI backend for NewWork - AI-powered coding assistant with multi-provider LLM support"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "NewWork Team"}
]
keywords = ["newwork", "fastapi", "ai", "llm", "claude", "openai", "coding-assistant", "desktop-app"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "sse-starlette>=1.0.0",
    "websockets>=12.0",
    # LLM Providers
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "tiktoken>=0.8.0",
    # Tool execution
    "aiofiles>=24.1.0",
    # Security
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.3",
    "mypy>=1.8.0",
    "ty>=0.0.1a8",  # Astral type checker (optional)
    "pre-commit>=3.6.0",
    "bandit>=1.7.6",
]

[project.scripts]
newwork = "app.main:main"

# 개발 의존성 그룹 (uv/pip 호환)
[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.3",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "httpx>=0.26.0",  # TestClient용
]

[project.urls]
Homepage = "https://github.com/yourusername/newwork"
Documentation = "https://github.com/yourusername/newwork/tree/main/docs"
Repository = "https://github.com/yourusername/newwork"
Issues = "https://github.com/yourusername/newwork/issues"

# Ruff 설정
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["app", "tests"]

# 활성화할 린트 규칙
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
    "N",    # pep8-naming
    "D",    # pydocstyle
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit
]

# 무시할 린트 규칙
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # do not perform function calls in argument defaults
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
    "D100",    # missing docstring in public module
    "D104",    # missing docstring in public package
    "S101",    # use of assert (for tests)
]

# 파일별 특별 규칙
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]  # unused imports, missing docstring
"tests/**" = ["ARG", "S101", "D", "ANN"]  # allow assert, no docstrings
"alembic/**" = ["D", "ANN"]  # no docstrings for migrations

# Docstring 스타일 (Google)
[tool.ruff.lint.pydocstyle]
convention = "google"

# Import 정렬 (isort 호환)
[tool.ruff.lint.isort]
known-first-party = ["app"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# 포맷터 설정
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy 설정
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Pytest 설정
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--cov=app",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--strict-markers",
    "-v",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage 설정
[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
